force-app/main/default/objects/HL_Report_Link__c/HL_Report_Link__c.object-meta.xml
<CustomObject>
    <label>HL Report Link</label>
    <nameField>
        <label>HL Report Links Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HL Report Links</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>