force-app/main/default/objects/HL_Report_Link__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Name of report that the end user will see</description>
    <label>Display Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>