force-app/main/default/objects/HL_Report_Link__c/fields/Home_Page_Access__c.field-meta.xml
<CustomField>
    <fullName>Home_Page_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Home Page Access</label>
    <type>Checkbox</type>
</CustomField>