force-app/main/default/objects/HL_Report_Link__c/fields/IsTableau__c.field-meta.xml
<CustomField>
    <fullName>IsTableau__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is being used in a workflow, that if the Report URL is a Tableau URL, then this field is checked TRUE.  The field is also used at the subscriber level in a formula, for reporting and list view criteria.</description>
    <label>Is Tableau</label>
    <type>Checkbox</type>
</CustomField>