force-app/main/default/objects/HL_Report_Link__c/fields/Public_Group__c.field-meta.xml
<CustomField>
    <fullName>Public_Group__c</fullName>
    <description>Public Group Permission Access</description>
    <inlineHelpText>Public Group Permission Access - Please Use the DeveloperName</inlineHelpText>
    <label>Public Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>