force-app/main/default/objects/HL_Report_Link__c/fields/Report_Description__c.field-meta.xml
<CustomField>
    <fullName>Report_Description__c</fullName>
    <description>Description of the report to be run</description>
    <label>Report Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>