force-app/main/default/objects/HL_Report_Link__c/fields/Report_Link_Ancillary_URL__c.field-meta.xml
<CustomField>
    <fullName>Report_Link_Ancillary_URL__c</fullName>
    <description>Ancillary report link used when a middle/prompt page is specified as the main report link</description>
    <inlineHelpText>Ancillary report link used when a middle/prompt page is specified as the main report link</inlineHelpText>
    <label>Report Link Ancillary URL</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>