force-app/main/default/objects/HL_Report_Link__c/fields/Report_Link_URL__c.field-meta.xml
<CustomField>
    <fullName>Report_Link_URL__c</fullName>
    <description>Link that will execute the report</description>
    <label>Report Link URL</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>