force-app/main/default/objects/HL_Report_Link__c/fields/Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Report_Type__c</fullName>
    <label>Report Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting Dashboards</fullName>
            </value>
            <value>
                <fullName>Accounting Group</fullName>
            </value>
            <value>
                <fullName>Company Group</fullName>
            </value>
            <value>
                <fullName>Company Single</fullName>
            </value>
            <value>
                <fullName>Contact Group</fullName>
            </value>
            <value>
                <fullName>Contact Single</fullName>
            </value>
            <value>
                <fullName>Engagement Group</fullName>
            </value>
            <value>
                <fullName>Engagement Single</fullName>
            </value>
            <value>
                <fullName>FSC Group</fullName>
            </value>
            <value>
                <fullName>Opportunity Group</fullName>
                <default>true</default>
                <label>Opportunity Group</label>
            </value>
            <value>
                <fullName>Opportunity Single</fullName>
            </value>
            <value>
                <fullName>My Dashboards</fullName>
            </value>
            <value>
                <fullName>Line of Business Dashboards</fullName>
            </value>
            <value>
                <fullName>Industry Group/Product Line Dashboards</fullName>
            </value>
            <value>
                <fullName>Revenue Group</fullName>
            </value>
            <value>
                <fullName>Sector Coverage Dashboards</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>