force-app/main/default/objects/HL_Report_Link__c/fields/Restrict_Delegate_Access__c.field-meta.xml
<CustomField>
    <fullName>Restrict_Delegate_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Restrict Delegate Access to the Report</description>
    <inlineHelpText>Restrict Delegate Access to the Report</inlineHelpText>
    <label>Restrict Delegate Access</label>
    <type>Checkbox</type>
</CustomField>