force-app/main/default/objects/HL_Report_Link__c/fields/Security_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Security_Assignment__c</fullName>
    <description>Used for Sharing/Security</description>
    <label>Security Assignment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Backlog</fullName>
            </value>
            <value>
                <fullName>Backlog Beta</fullName>
            </value>
            <value>
                <fullName>CF</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>EU_MKTG</fullName>
            </value>
            <value>
                <fullName>FVA</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>FS</fullName>
            </value>
            <value>
                <fullName>Industry_CFR</fullName>
            </value>
            <value>
                <fullName>IndustryHead</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>LOBHead</fullName>
            </value>
            <value>
                <fullName>MD_CFR</fullName>
            </value>
            <value>
                <fullName>Member_CFR</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>