force-app/main/default/objects/HL_Report_Link__c/fields/Security_Assignment_Aggregate__c.field-meta.xml
<CustomField>
    <fullName>Security_Assignment_Aggregate__c</fullName>
    <description>Security Assignment Aggregate of the Multiselect Picklist</description>
    <label>Security Assignment Aggregate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>