force-app/main/default/objects/HL_Report_Link__c/fields/Thumbnail_Image_Url__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail_Image_Url__c</fullName>
    <description>This field is used to house the URL to the dashboard image that will then, be used in the SFDC Home Page Component of the subscriber with Home Page Access = TRUE.</description>
    <label>Thumbnail Image Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>