force-app/main/default/objects/HL_Report_Link__c/listViews/By_Type.listView-meta.xml
<ListView>
    <fullName>By_Type</fullName>
    <columns>Display_Name__c</columns>
    <columns>Report_Description__c</columns>
    <columns>Report_Type__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Report_Type__c</field>
        <operation>equals</operation>
        <value>Engagement Single,Engagement Group</value>
    </filters>
    <label>By Type</label>
</ListView>