force-app/main/default/objects/HL_Report_Link__c/listViews/Tableau_Reports.listView-meta.xml
<ListView>
    <fullName>Tableau_Reports</fullName>
    <columns>IsTableau__c</columns>
    <columns>NAME</columns>
    <columns>Display_Name__c</columns>
    <columns>Public_Group__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Report_Description__c</columns>
    <columns>Report_Link_Ancillary_URL__c</columns>
    <columns>Report_Link_URL__c</columns>
    <columns>Report_Type__c</columns>
    <columns>Restrict_Delegate_Access__c</columns>
    <columns>Security_Assignment__c</columns>
    <columns>Security_Assignment_Aggregate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsTableau__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Tableau Reports</label>
</ListView>